--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load app_filters %}
 
  <title>{% block title %}{{peliculaa.titulo}}{% endblock %}</title>
 
