--- a/templates/seriessingle.html
+++ b/templates/seriessingle.html
@@ -1,5 +1,6 @@
 ﻿{% extends 'base.html' %}
 {% load static %}
+{% load app_filters %}
 
 
 	<title>{% block title %}{{series.titulo}}{% endblock %}</title>
