--- a/templates/seriessingle.html
+++ b/templates/seriessingle.html
@@ -1,6 +1,6 @@
 ﻿{% extends 'base.html' %}
 {% load static %}
-{% load app_filters %}
+{% load my_templatetag %}
 
 
 	<title>{% block title %}{{series.titulo}}{% endblock %}</title>
