--- a/templates/base.html
+++ b/templates/base.html
@@ -900,7 +900,7 @@ var load = false
               <span></span>
             </div>
             </div>
-            <a href="/waomovies/inicio/"><img style="margin-left: 15px;" class="logo" src="{% static 'img/sin título-1.png' %}" alt="" width="200" height="105"></a>
+            <a href="/waomovies/inicio/"><img style="margin-left: 15px;" class="logo" src="{% static 'img/waologo.png' %}" alt="" width="180" height="90"></a>
           </div>
         <div class="collapse navbar-collapse flex-parent" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav flex-child-menu menu-left">
