--- a/templates/index.html
+++ b/templates/index.html
@@ -948,10 +948,10 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 				<div class="tabs">
 					<ul class="tab-links-2">
 						<li class="active"><a href="#tab21">#Series</a></li>
-						<li class=""><a href="#tab22"> #últimos capitulos subidos en</a></li>
-						<li><a href="#tab23">  #Top semanal  </a></li>
+						<li class=""><a href="#tab22">#últimos capitulos</a></li>
+						<li><a href="#tab23"> #Top semanal  </a></li>
 						{% if request.user.favoritos_series %}
-						<li><a href="#tab24">  #Seleccionada para ti  </a></li>
+						<li><a href="#tab24">#Seleccionada para ti</a></li>
 						{% endif %}
 
 					</ul>
