--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -23,7 +23,7 @@
 ">
       <div class="wrap-login100">
         <form style="position: relative; margin-top: -200px;" class="login100-form" method="post" action="/waomovies/register/" id="formulario" name="formulario" onsubmit="return validarFormulario()" autocomplete="off">{% csrf_token %}
-          <span class="login100-form-title p-b-34" style="font-size: 36px; font-weight: bold; font-family: sans-serif;">
+          <span class="login100-form-title p-b-34" style="font-size: 40px; font-weight: bold; font-family: forte;">
             Bienvenido
           </span>
           
@@ -63,9 +63,10 @@
                     <div id="clave2_error"></div>
 
           </div>
+          <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700" rel="stylesheet">
           
           <div class="container-login100-form-btn">
-            <button class="login100-form-btn" style="background-color: #C70039;">
+            <button class="login100-form-btn" style="background-color: #C70039; font-family: 'Vollkorn', serif; font-weight: bold;">
               Registrarse
             </button>
           </div>
@@ -74,13 +75,25 @@
 
           <div class="w-full text-center m-t-18">
             
-            <a href="/waomovies/auth/" class="txt3" style="color: #000; font-family: Courier New;">
+            <a href="/waomovies/auth/" class="txt3" style="color: #000; font-family: arial;">
               Iniciar Sesión
             </a>
           </div>
         </form>
-        <h3 style="position: absolute; z-index: 5; font-weight: bold; top: 58%; right: 57%; color: white; text-align: center;" > “Estar en casa sin<strong> películas</strong>, <br>es ser un alma en pena.” </h3>
+
+    <style type="text/css">
+          @media (max-width: 768px) {
+  .mobilenone {
+    display: none;
+  }
+}
+  
+    </style>
+    <div class="mobilenone">
+          <h3 style="position: absolute; z-index: 5; font-weight: bold; top: 58%; right: 57%; color: white; text-align: center;" > “Estar en casa sin<strong> películas</strong>, <br>es ser un alma en pena.” </h3>
         <a href="/waomovies/inicio/"><img src="{%static ''%}img/wamovieslogo.png" style="cursor: pointer; position: absolute; z-index: 5; right: 70%; top: 40%;"></a>
+        </div>
+        
         <div class="login100-more" style="filter: blur(1px); background-image: url('{% static 'img/tt.png' %}');"></div>
       </div>
     </div>
