--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4257,6 +4257,54 @@ ul {
 .cate .orange {
   background-color: #ec5a1a;
 }
+
+.cate .purple {
+  background-color: #8B00FF;
+}
+
+.cate .red {
+  background-color: #FF0000;
+}
+
+.cate .greendark {
+  background-color: #016118;
+}
+
+.cate .reddark {
+  background-color: #790401;
+}
+.cate .black {
+  background-color: #000000;
+}
+.cate .sowhitegreen {
+  background-color: #1E8449;
+}
+.cate .darkgray {
+  background-color: #1C2833;
+}
+
+.cate .gray {
+  background-color: #848484;
+}
+
+.cate .DOCU {
+background: #16222A;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #3A6073, #16222A);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #3A6073, #16222A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .movie_list .movie-item-style-2 img,
 .movie_single .movie-item-style-2 img,
 .userfav_list .movie-item-style-2 img {
@@ -4421,6 +4469,26 @@ ul {
     max-width: 160px;
   }
 }
+
+@media (max-width: 374px) {
+  .movie-item-style-1 {
+    margin-left: 0px;
+    max-width: 140px;
+  }
+}
+
+@media (max-width: 334px) {
+  .movie-item-style-1 {
+    margin-left: 0px;
+    max-width: 125px;
+  }
+}
+@media (max-width: 305px) {
+  .movie-item-style-1 {
+    margin-left: 0px;
+    max-width: 110px;
+  }
+}
 .style-3 {
   width: 160px;
 }
@@ -4451,6 +4519,8 @@ ul {
     max-width: 100%;
   }
 }
+
+
 
 .grid-fav .movie-item-style-2 {
   margin-right: 15px;
@@ -7323,7 +7393,7 @@ p.ceb-single {
 }
 @media (max-width: 991px) {
   .ipad-width {
-    max-width: 550px;
+    max-width: 650px;
     margin: 0 auto;
   }
   .ipad-width2 {
