--- a/templates/base.html
+++ b/templates/base.html
@@ -910,7 +910,7 @@ var resultac = document.getElementById('result').style.display= "none";
             }
            
           </script>
-          <div class="col-md-6">
+          <div class="col-md-6" style="position: relative; left: 18px;">
           <div class="toggle-search col-md-6" >
               <i class="fa fa-search" id="searchshower"onclick="mac()" ></i>
             </div>
