--- a/templates/base.html
+++ b/templates/base.html
@@ -302,7 +302,7 @@ background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, F
     <div style="background-color:rgba(0,0,0,0.7); border-radius: 3px;" class="modal-content">
       <!--Header-->
       <div class="modal-header" style="background-color:#fdd835; height: 50px; position: absolute; margin-bottom: 30px; width: 100%;">
-        <img class="logo" src="{% static 'img/waologo.png' %}" alt="" width="110" height="60">
+        <img style="margin-top: 25px;" class="logo" src="{% static 'img/waologo.png' %}" alt="" width="110" height="60">
 
         <p class="heading lead" style="text-shadow: 1px 1px gray;text-align: center; font-size: 17px; font-weight: bold; margin-left: 14px; font-family: dosis;">
           Menú WAO
