--- a/templates/seriessingle.html
+++ b/templates/seriessingle.html
@@ -6,6 +6,7 @@
 	<title>{% block title %}{{series.titulo}}{% endblock %}</title>
 
 
+
 {% block scriptt %}
 
 
@@ -981,6 +982,20 @@ $(this).remove();
 {% endblock %}
 {% block content %}
 
+
+<style type="text/css">
+    @media (max-width: 340px) {
+  
+  body {
+    width: 110%;
+  }
+
+  .ht-header {
+    width: 110%;
+
+}
+}
+</style>
 <style type="text/css">
 	
 	.fa-circle-o-notch {
